[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spatiallm"
version = "0.1.1"
description = "SpatialLM: Training Large Language Models for Structured Indoor Modeling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Llama3.2" }
authors = [{ name = "ManyCore Research Team" }]

dependencies = [
  "torch==2.4.1+cu121",
  "torchvision==0.19.1+cu121",
  "torchaudio==2.4.1+cu121",
  "transformers>=4.41.2,<=4.46.1",
  "safetensors>=0.4.5,<1",
  "pandas>=2.2.3,<3",
  "einops>=0.8.1,<1",
  "numpy>=1.26,<2",
  "scipy>=1.15.2,<2",
  "scikit-learn>=1.6.1,<2",
  "toml>=0.10.2,<1",
  "tokenizers>=0.19.0,<0.20.4",
  "huggingface_hub>=0.25.0",
  "rerun-sdk>=0.21.0,<1",
  "shapely>=2.0.7,<3",
  "bbox>=0.9.4,<1",
  "terminaltables>=3.1.10,<4",
  "open3d>=0.18.0,<1",
  "nvidia-cudnn-cu12",
  "nvidia-nccl-cu12",
  "addict>=2.4.0,<3",
]

[project.optional-dependencies]
# `uv pip install -e .[torchsparse]`
torchsparse = [
  "torchsparse @ git+https://github.com/mit-han-lab/torchsparse.git",
]

# `uv pip install -e .[sonata]`
# (flash-attn builds from source; ensure build toolchain & CUDA headers installed)
sonata = [
  "ninja",
  "flash-attn",
  "torch-scatter",
  "timm",
  "spconv-cu120",
]

# ----- uv configuration -----
# Pin torch/vision/audio to the CUDA 12.1 wheel index.
[tool.uv.extra-build-dependencies]
torchsparse = [ "torch==2.4.1+cu121", ]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
# torch-scatter wheels are published via a "flat" index for specific torch+cuda combos
torch-scatter = { index = "pyg-cu121" }

# PyTorch CUDA 12.1 index (explicit so only mapped packages use it)
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# PyG wheels for torch 2.4.0 + cu121 (flat HTML listing)
[[tool.uv.index]]
name = "pyg-cu121"
url = "https://data.pyg.org/whl/torch-2.4.0+cu121.html"
format = "flat"
explicit = true

[tool.hatch.metadata]
allow-direct-references = true
